# streamlord

./: README.md  pyproject.toml
streamlord/: __init__.py  pipeline.py
streamlord/collector/: navigation.py
streamlord/collectors/: __init__.py
streamlord/definitions/: __init__.py  contracts.py
streamlord/mappers/: __init__.py  destroyer.py  digger.py  injector.py  squeezer.py  stamper.py
streamlord/transformer/: digger.py
streamlord/transformers/: __init__.py  destroyer.py  injector.py  squeezer.py  stamper.py
